Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/Pull_Request__c.object-meta.xml
<CustomObject>
    <label>Pull Request</label>
    <nameField>
        <label>Pull Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pull Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>