Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/Assignees__c.field-meta.xml
<CustomField>
    <fullName>Assignees__c</fullName>
    <label>Assignees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>