Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/Changed_Files__c.field-meta.xml
<CustomField>
    <fullName>Changed_Files__c</fullName>
    <description>The number of files changed in the pull request</description>
    <label>Changed Files</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>