Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/Closed_At__c.field-meta.xml
<CustomField>
    <fullName>Closed_At__c</fullName>
    <description>The date when the pull request was closed or empty if it is not closed</description>
    <label>Closed At</label>
    <type>Date</type>
</CustomField>