Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/Commits__c.field-meta.xml
<CustomField>
    <fullName>Commits__c</fullName>
    <description>The number of commits in the pull request</description>
    <label>Commits</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>