Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/Mergeable__c.field-meta.xml
<CustomField>
    <fullName>Mergeable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mergeable</label>
    <type>Checkbox</type>
</CustomField>