Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/Merged__c.field-meta.xml
<CustomField>
    <fullName>Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merged</label>
    <type>Checkbox</type>
</CustomField>