Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/Merged_At__c.field-meta.xml
<CustomField>
    <fullName>Merged_At__c</fullName>
    <description>The date when the pull request was merged or empty if it is not merged</description>
    <label>Merged At</label>
    <type>Date</type>
</CustomField>