Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/Merged_By__c.field-meta.xml
<CustomField>
    <fullName>Merged_By__c</fullName>
    <description>The git hub username who merged the pull request</description>
    <label>Merged By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>