Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <description>Pull Request Number</description>
    <label>Request Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>