Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/Requested_Reviewers__c.field-meta.xml
<CustomField>
    <fullName>Requested_Reviewers__c</fullName>
    <label>Requested Reviewers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>