Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>The state of the pull request</description>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>