Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/Target_Branch__c.field-meta.xml
<CustomField>
    <fullName>Target_Branch__c</fullName>
    <description>The target branch of the pull request</description>
    <label>Target Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>