Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>Pull Request Url</description>
    <label>Url</label>
    <type>Url</type>
</CustomField>