Dummy_Package_for_scratch_org/main/default/objects/Pull_Request__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Pull Requests</relationshipLabel>
    <relationshipName>Pull_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>